[package]
name = "modi-cloud"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3.2"
colored = "2"
async-trait = "0.1"
sha2 = "0.10.2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
futures = { version = "0.3", default-features = false }
data-encoding = "2.0"
rand = "0.5"
flate2 = "1"
tar = "0.4"
log = "0.4"
pretty_env_logger = "0.4"
uuid = { version = "0.8", features = ["serde", "v4"] }
